Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73799

When specifying the default OpenGL format to be a 4.1 Core profile it will prevent QWebEngineView from working

    XMLWordPrintable

Details

    • macOS

    Description

      When specifying the default OpenGL format to be a 4.1 Core profile it will prevent QWebEngineView from working. It will output errors such as:

      [57049:80899:0213/124056.769256:ERROR:gl_context_cgl.cc(136)] Error creating context.
      [57049:80899:0213/124056.769333:ERROR:gles2_command_buffer_stub.cc(262)] ContextResult::kFatalFailure: Failed to create shared context for virtualization.
      [57049:80899:0213/124056.772053:ERROR:gl_context_cgl.cc(136)] Error creating context.
      [57049:80899:0213/124056.772081:ERROR:gles2_command_buffer_stub.cc(262)] ContextResult::kFatalFailure: Failed to create shared context for virtualization.
      [57049:80899:0213/124056.773036:ERROR:gl_context_cgl.cc(136)] Error creating context.
      [57049:80899:0213/124056.773065:ERROR:gles2_command_buffer_stub.cc(262)] ContextResult::kFatalFailure: Failed to create shared context for virtualization.
      [57049:80899:0213/124056.774374:ERROR:gl_context_cgl.cc(136)] Error creating context.
      [57049:80899:0213/124056.774409:ERROR:gles2_command_buffer_stub.cc(262)] ContextResult::kFatalFailure: Failed to create shared context for virtualization.
      [57049:80899:0213/124056.776475:ERROR:gl_context_cgl.cc(136)] Error creating context.
      [57049:80899:0213/124056.776505:ERROR:gles2_command_buffer_stub.cc(262)] ContextResult::kFatalFailure: Failed to create shared context for virtualization.
      [57049:80899:0213/124056.777270:ERROR:gl_context_cgl.cc(136)] Error creating context.
      [57049:80899:0213/124056.777310:ERROR:gles2_command_buffer_stub.cc(262)] ContextResult::kFatalFailure: Failed to create shared context for virtualization.
      [57049:80899:0213/124056.777978:ERROR:gl_context_cgl.cc(136)] Error creating context.
      [57049:80899:0213/124056.778006:ERROR:gles2_command_buffer_stub.cc(262)] ContextResult::kFatalFailure: Failed to create shared context for virtualization.
      [57049:80899:0213/124056.778621:ERROR:gl_context_cgl.cc(136)] Error creating context.
      [57049:80899:0213/124056.778648:ERROR:gles2_command_buffer_stub.cc(262)] ContextResult::kFatalFailure: Failed to create shared context for virtualization.
      [57049:80899:0213/124056.779285:ERROR:gl_context_cgl.cc(136)] Error creating context.
      [57049:80899:0213/124056.779311:ERROR:gles2_command_buffer_stub.cc(262)] ContextResult::kFatalFailure: Failed to create shared context for virtualization.
      [57049:80899:0213/124056.780036:ERROR:gl_context_cgl.cc(136)] Error creating context.
      [57049:80899:0213/124056.780060:ERROR:gles2_command_buffer_stub.cc(262)] ContextResult::kFatalFailure: Failed to create shared context for virtualization.
      

      Attachments

        For Gerrit Dashboard: QTBUG-73799
        # Subject Branch Project Status CR V

        Activity

          People

            mibrunin Michael Bruning
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes