Try different versions when creating a CoreProfile context on macOS

Context creation failed when trying to create different CoreProfile
contexts with mixed attributes.

Change-Id: I1da344c9d300fa72b18059f60c2715fdf9d7a716
Task-number: QTBUG-73799
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>