chromium/ui/gl/init/gl_factory_mac.cc
@@ -58,6 +58,8 @@ class NoOpGLSurface : public GLSurface {
   DISALLOW_COPY_AND_ASSIGN(NoOpGLSurface);
 };
 
+const int kOpenGL3_2Core = 0x3200;
+const int kOpenGL4_1Core = 0x4100;
 }  // namespace
 
 std::vector<GLImplementation> GetAllowedGLImplementations() {
@@ -78,16 +80,32 @@ bool GetGLWindowSystemBindingInfo(const GLVersionInfo& gl_info,
   return false;
 }
 
+scoped_refptr<GLContext> tryCreateCoreProfileContext(GLShareGroup* share_group,
+                                                     GLSurface* compatible_surface,
+                                                     const GLContextAttribs& attribs) {
+  scoped_refptr<GLContext> context = InitializeGLContext(new GLContextCGL(share_group,
+                                                                          kOpenGL4_1Core),
+                                                         compatible_surface, attribs);
+  if (context != nullptr)
+    return context;
+
+  return InitializeGLContext(new GLContextCGL(share_group, kOpenGL3_2Core),
+                             compatible_surface, attribs);
+}
+
 scoped_refptr<GLContext> CreateGLContext(GLShareGroup* share_group,
                                          GLSurface* compatible_surface,
                                          const GLContextAttribs& attribs) {
   TRACE_EVENT0("gpu", "gl::init::CreateGLContext");
   switch (GetGLImplementation()) {
     case kGLImplementationDesktopGL:
-    case kGLImplementationDesktopGLCoreProfile:
     case kGLImplementationAppleGL:
       return InitializeGLContext(new GLContextCGL(share_group),
                                  compatible_surface, attribs);
+    case kGLImplementationDesktopGLCoreProfile:
+      return tryCreateCoreProfileContext(share_group,
+                                         compatible_surface, attribs);
+
 #if defined(USE_EGL)
     case kGLImplementationEGLGLES2:
     case kGLImplementationEGLANGLE:
